# firims

./: Cargo.toml  README.md  flake.nix  makefile
.github/workflows/: build-test.yml
bench_results/: m2  ryzen7_9800x3d
benches/: bench.rs
src/: bitset.rs  integer.rs  lib.rs  map.rs  vec_map.rs
