[package]
name = "firims"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "fixed range integer maps and sets"
readme = "README.md"
exclude = [ "./bench_results/*" ]

[dependencies]
num-traits = "0.2.19"

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
integer-hasher = "0.1.1"
itertools = "0.14.0"
rand = "0.9.0"
