[package]
name = "firims"
description = "fixed range integer maps and sets"
authors = ["Tommy Breslein <github.com/tbreslein>"]
version = "2.0.1"
edition = "2021"
license = "MIT"
readme = "README.md"
documentation = "https://docs.rs/firims"
repository = "https://github.com/tbreslein/firims"
exclude = [ "./bench_results/*" ]
keywords = [ "data-structures" ]
categories = [ "data-structures" ]

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0.218", features = ["derive"], default-features = false, optional = true }
serde_json = { version = "1.0.140", default-features = false, optional = true }

[lib]
bench = false

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
criterion = "0.5.1"
integer-hasher = "0.1.1"
rand = "0.9.0"

[features]
default = []
serde = ["dep:serde"]
serde_json = ["dep:serde_json"]
